fix overflowing images on small screens

--- a/style.css
+++ b/style.css
@@ -98,7 +98,14 @@ button {
 
 .back {
     background-color: lightgray;
+
     transform: rotateY(180deg);
+}
+
+.back img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .front {
